<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cat_maincat_label"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="Select category"
        android:textSize="30sp"
        android:textColor="@color/colorRed"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Spinner
        android:id="@+id/cat_maincat_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cat_maincat_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/cat_maincat_label"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/cat_maincat_label"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/cat_subcat_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Create new subcategory"
        android:textSize="25sp"
        android:textColor="@color/colorRed"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cat_maincat_spinner"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/cat_subcat_label_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="All subcategories of ..."
        android:textSize="25sp"
        android:textColor="@color/colorRed"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cat_add_btn"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/cat_input_txt"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Subcategory name"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/cat_subcat_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/cat_add_btn"
        style="@style/ButtonRed"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="CREATE"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cat_input_txt"
        android:textSize="45px"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp" />

    <ListView
        android:id="@+id/cat_listview"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cat_subcat_label_list"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:divider="@color/colorRed"
        android:dividerHeight="1.0sp"
        android:layout_marginStart="8dp" />

</android.support.constraint.ConstraintLayout>