<resources>
    <string name="app_name">PocketDiary</string>
    <string name="pocketdiary">Pocket Diary</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="entry_title">Title</string>
    <string name="entry_category">Category</string>
    <string name="entry_subcategory">Subcategory</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_save">Save</string>
    <string name="create_entry">Create Entry</string>
    <string name="review">Review</string>
    <string name="statistic">Statistic</string>
    <string name="entry_date">Date</string>
    <string name="entry_address">Location</string>
    <string name="entry_friends">Friends</string>
    <string name="checked">&#x2713;</string>
    <string name="entry_description_hint">Here you can insert a description of this activity!</string>
    <string name="name">Name:</string>
    <string name="pin_lock">PIN lock:</string>
    <string name="current_pin">current PIN</string>
    <string name="new_pin">new PIN</string>
    <string name="repeat_pin">repeat PIN</string>
    <string name="edit_friends">Edit Friends</string>
    <string name="edit_categories">Edit Categories</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="off">OFF</string>
    <string name="categories">categories</string>
    <string name="title_activity_image_fullscreen">ImageFullscreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_delete_picture_screen">DeletePictureScreen</string>
    <string name="pdf_export">pdf export</string>
    <string name="title_activity_location_screen">Location</string>
    <string name="title_activity_location_detail_screen">Map</string>
</resources>
